--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
@@ -1,21 +1,21 @@
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
-
+      
       <div class="col d-flex justify-content-between align-items-center">
 
         <h4 class="page-title">{{title}}</h4>
-
+  
         <div class="back-icon" style="margin-right: 10px;">
-
+  
           <a href="javascript:void(0);" onclick="history.back();">
-
+  
             <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-
+  
           </a>
-
+  
         </div>
-
+  
       </div>
     </div>
   </div>
@@ -23,7 +23,7 @@
     <div class="col">
       <form (ngSubmit)="submit(adddoc)" #fm="ngForm">
 
-
+      
         <div class="p-4 bg-white shadow-dark rounded-2">
 
           <div class="form-group row">
@@ -33,14 +33,14 @@
                      class="form-control"
                      id="plantname"
                      name="plantname"
-                     placeholder="Enter Plant Name"
+                     placeholder="Enter Plant Name" 
                      [(ngModel)]="adddoc.PlantName"
                      maxlength="50"
                      required
-                     #plantnameInput="ngModel" />
-              <div *ngIf="plantnameInput.invalid && (plantnameInput.dirty || plantnameInput.touched)" class="text-danger">
-                Plant Name is required
-              </div>
+                     #plantnameInput="ngModel"  />
+                     <div *ngIf="plantnameInput.invalid && (plantnameInput.dirty || plantnameInput.touched)" class="text-danger">
+                      Plant Name is required
+                    </div>
 
             </div>
           </div>
@@ -48,27 +48,29 @@
           <div class="form-group row">
             <label for="plantcode" class="col-sm-2 col-form-label">Plant Code<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
-              <input type="text"
-                     class="form-control"
-                     id="plantcode"
-                     name="plantcode"
-                     placeholder="Enter Plant Code"
-                     [(ngModel)]="adddoc.PlantCode"
-                     maxlength="6"
-                     required
-                     [disabled]="editMode"
-                     #plantcodeInput="ngModel" />
+              <input
+                type="text"
+                class="form-control"
+                id="plantcode"
+                name="plantcode"
+                placeholder="Enter Plant Code"
+                [(ngModel)]="adddoc.PlantCode"
+                maxlength="6"
+                required
+                
+                #plantcodeInput="ngModel"
+              />
               <div *ngIf="plantcodeInput.invalid && (plantcodeInput.dirty || plantcodeInput.touched)" class="text-danger">
                 <ng-container *ngIf="plantcodeInput.hasError('pattern')">
                   Please enter only numbers
                 </ng-container>
                 <ng-container *ngIf="plantcodeInput.hasError('required')">
-                  Plant Code is required.
+                  Plant Code is required
                 </ng-container>
               </div>
             </div>
           </div>
-
+          
 
 
 
@@ -83,16 +85,16 @@
                         rows="3"
                         maxlength="250"
                         placeholder="Enter Plant Address"
-                        [(ngModel)]="adddoc.PlantAddress" required
+                        [(ngModel)]="adddoc.PlantAddress"  required
                         #descriptionInput="ngModel">
                       </textarea>
-              <div *ngIf="descriptionInput.invalid && (descriptionInput.dirty || descriptionInput.touched)" class="text-danger">
-                Plant Address is required
-              </div>
+                      <div *ngIf="descriptionInput.invalid && (descriptionInput.dirty || descriptionInput.touched)" class="text-danger">
+                       Plant Address is required
+                      </div>
             </div>
           </div>
           <div class="form-group row">
-            <label for="Comments" class="col-sm-2 col-form-label">Comments </label>
+            <label for="Comments" class="col-sm-2 col-form-label">Comments<span style="color: red; font-weight: bolder;">*</span> </label>
             <div class="col-sm-10">
               <textarea class="form-control"
                         id="Comments"
@@ -101,12 +103,15 @@
                         rows="3"
                         placeholder="Comments"
                         [(ngModel)]="adddoc.Comments" [disabled]="viewMode"
-                        #commentsCxhvcjInput="ngModel"></textarea>
-              <div *ngIf="commentsCxhvcjInput.invalid && (commentsCxhvcjInput.dirty || commentsCxhvcjInput.touched)" class="text-danger">
-                Comments.
-              </div>
-              <!-- Show validation error message -->
-
+                        required 
+                        #commentsCxhvcjInput="ngModel"
+                        
+                        ></textarea>
+                        <div *ngIf="commentsCxhvcjInput.invalid && (commentsCxhvcjInput.dirty || commentsCxhvcjInput.touched)" class="text-danger">
+                            Comments.
+                        </div>
+           <!-- Show validation error message -->
+   
             </div>
           </div>
 
@@ -129,6 +134,6 @@
 
 <style>
   .form-control {
-    max-width: 350px;
-  }
+  max-width: 350px;
+}
 </style>
