--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/usermanagement/usermanagement.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/usermanagement/usermanagement.component.html
@@ -5,8 +5,8 @@
       <div class="col">
         <div class="col d-flex justify-content-between align-items-center">
           <h4 class="page-title"><a (click)="navigateTo('home')"><i class="bi bi-house-door"></i></a> / User Management</h4>
-          <div class="back-icon" style="margin-right: 10px;">
-            <a href="javascript:void(0);" onclick="history.back();">
+          <div class="back-icon" style="margin-right: 10px;">    
+            <a href="javascript:void(0);" onclick="history.back();">   
               <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
             </a>
           </div>
@@ -35,16 +35,16 @@
 
 
 
-    <!-- <div class="col col-lg-3">
+    <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('groups')">
         <div class="card-body">
           <i class="fa fa-chart-line"></i>
           <h5 class="card-title">User Group Configurations</h5>
         </div>
       </div>
+    
+    </div>
 
-    </div> -->
-
-
+    
   </div>
-</div>
+  </div>
