--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/securitymgmt/securitymgmt.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/securitymgmt/securitymgmt.component.html
@@ -3,12 +3,12 @@
   <div class="container-fluid">
     <div class="row p-2">
       <div class="col">
-       
-       
+      
+      
 
 <div class="col d-flex justify-content-between align-items-center">
-  <h4 class="page-title">System Configuration</h4>
-   
+  <h4 class="page-title">Security Configuration</h4>
+  
 
       <div class="back-icon" style="margin-right: 10px;">
 
@@ -29,16 +29,17 @@
           <div class="p-4 bg-white shadow-dark rounded-2">
 
             <div class="form-group row">
-              <label for="minimumuseridlength" class="col-sm-2 col-form-label">Minimum User Id Length<span style="color: red; font-weight: bolder;">*</span></label>
+              <label for="minimumuseridlength" class="col-sm-2 col-form-label">Minimum User ID Length<span style="color: red; font-weight: bolder;">*</span></label>
               <div class="col-sm-10">
                 <input type="text"
-                       class="form-control"
-                       id="minlength"
-                       name="minlength"
-                       placeholder="Enter user Id length"
-                       [(ngModel)]="securityType.MinimumUserIdLength" [disabled]="viewMode"
-                       required
-                       #minlengthInput="ngModel" />
+                      class="form-control"
+                      id="minlength"
+                      name="minlength"
+                      placeholder="Enter user Id length"
+                      [(ngModel)]="securityType.MinimumUserIdLength" [disabled]="viewMode"
+                      required
+                      maxlength="24"
+                      #minlengthInput="ngModel" />
                 <div *ngIf="minlengthInput.invalid && (minlengthInput.dirty || minlengthInput.touched)" class="text-danger">
                   Minimum UserID is required
                 </div>
@@ -49,13 +50,14 @@
               <label for="minpass" class="col-sm-2 col-form-label">Minimum Password Length<span style="color: red; font-weight: bolder;">*</span></label>
               <div class="col-sm-10">
                 <input type="text"
-                       class="form-control"
-                       id="minpass"
-                       name="minpass"
-                       placeholder="Enter Password Length"
-                       [(ngModel)]="securityType.MinimumPasswordLength" [disabled]="viewMode"
-                       required
-                       #minpassInput="ngModel" />
+                      class="form-control"
+                      id="minpass"
+                      name="minpass"
+                      placeholder="Enter Password Length"
+                      [(ngModel)]="securityType.MinimumPasswordLength" [disabled]="viewMode"
+                      required
+                      maxlength="24"
+                      #minpassInput="ngModel" />
                 <div *ngIf="minpassInput.invalid && (minpassInput.dirty || minpassInput.touched)" class="text-danger">
                   Minimum password is required
                 </div>
@@ -66,13 +68,13 @@
               <label for="passcomplexity" class="col-sm-2 col-form-label">Password Complexity<span style="color: red; font-weight: bolder;">*</span></label>
               <div class="col-sm-10">
                 <input type="text"
-                       class="form-control"
-                       id="passwordcomplexity"
-                       name="passwordcomplexity"
-                       placeholder="Enter Password Complexity"
-                       [(ngModel)]="securityType.PasswordComplexity" [disabled]="viewMode"
-                       required
-                       #departmentNameInput="ngModel" />
+                      class="form-control"
+                      id="passwordcomplexity"
+                      name="passwordcomplexity"
+                      placeholder="Enter Password Complexity"
+                      [(ngModel)]="securityType.PasswordComplexity" [disabled]="viewMode"
+                      required
+                      #departmentNameInput="ngModel" />
                 <div *ngIf="departmentNameInput.invalid && (departmentNameInput.dirty || departmentNameInput.touched)" class="text-danger">
                   Password Complexity is Required
                 </div>
@@ -85,13 +87,13 @@
               <label for="Iattempts" class="col-sm-2 col-form-label">Invalid Attempts<span style="color: red; font-weight: bolder;">*</span></label>
               <div class="col-sm-10">
                 <input type="text"
-                       class="form-control"
-                       id="Iattempts"
-                       name="Iattempts"
-                       placeholder="Enter no. of invalid Attempts"
-                       [(ngModel)]="securityType.InvalidAttempts" [disabled]="viewMode"
-                       required
-                       #IattemptsInput="ngModel" />
+                      class="form-control"
+                      id="Iattempts"
+                      name="Iattempts"
+                      placeholder="Enter no. of invalid Attempts"
+                      [(ngModel)]="securityType.InvalidAttempts" [disabled]="viewMode"
+                      required
+                      #IattemptsInput="ngModel" />
                 <div *ngIf="IattemptsInput.invalid && (IattemptsInput.dirty || IattemptsInput.touched)" class="text-danger">
                   Give No.Of Attempts
                 </div>
@@ -102,13 +104,13 @@
               <label for="sessiontimeout" class="col-sm-2 col-form-label">Session Time Out<span style="color: red; font-weight: bolder;">*</span></label>
               <div class="col-sm-10">
                 <input type="text"
-                       class="form-control"
-                       id="sessiontimeout"
-                       name="sessiontimeout"
-                       placeholder="Enter Session TimeOut"
-                       [(ngModel)]="securityType.SessionTimeOut" [disabled]="viewMode"
-                       required
-                       #sessiontimeoutInput="ngModel" />
+                      class="form-control"
+                      id="sessiontimeout"
+                      name="sessiontimeout"
+                      placeholder="Enter Session TimeOut"
+                      [(ngModel)]="securityType.SessionTimeOut" [disabled]="viewMode"
+                      required
+                      #sessiontimeoutInput="ngModel" />
                 <div *ngIf="sessiontimeoutInput.invalid && (sessiontimeoutInput.dirty || sessiontimeoutInput.touched)" class="text-danger">
                   Enter Session TimeOut
                 </div>
