--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/usermanagement/usermanagement.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/usermanagement/usermanagement.component.html
@@ -35,7 +35,7 @@
 
 
 
-    <div class="col col-lg-3">
+    <!-- <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('groups')">
         <div class="card-body">
           <i class="fa fa-chart-line"></i>
@@ -43,7 +43,7 @@
         </div>
       </div>
     
-    </div>
+    </div> -->
 
     
   </div>
