--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -4,11 +4,12 @@
             <div class="d-flex justify-content-between align-items-center">
                 <h4 class="page-title">My Assignments List</h4>
 
-                <div class="back-icon" style="margin-right: -850px;">
+                <div class="back-icon" style="margin-right: -775px;">
                     <a href="javascript:void(0);" onclick="history.back();">
                         <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
                     </a>
                 </div>
+                
                 
                 <div class="d-flex page-title-actions">
                     <div class="input-group custom-input-group">
@@ -37,12 +38,12 @@
                             <th>S.No</th>
                             <th pSortableColumn="TaskType" style="width:20%">Task Type<p-sortIcon field="TaskType"></p-sortIcon></th>
                             <th pSortableColumn="TaskName" style="width:20%">Document Type<p-sortIcon field="TaskName"></p-sortIcon></th>
-                            <th pSortableColumn="Stage" style="width:10%">Stage<p-sortIcon field="Stage"></p-sortIcon></th>
+                            <!-- <th pSortableColumn="Stage" style="width:10%">Stage<p-sortIcon field="Stage"></p-sortIcon></th> -->
                             <!-- <th pSortableColumn="assignedGroup" style="width:15%">Assigned Group <p-sortIcon field="assignedGroup"></p-sortIcon></th> -->
                             <th pSortableColumn="initiatedBy" style="width:20%">Initiated By<p-sortIcon field="initiatedBy"></p-sortIcon></th>
                             <th pSortableColumn="InitiatedOn" style="width:200px">Initiated On<p-sortIcon field="InitiatedOn"></p-sortIcon></th>
                             <th pSortableColumn="Status" style="width:200px">Status<p-sortIcon field="Status"></p-sortIcon></th>
-                            <th pSortableColumn="InitiatedOn" style="width:200px">Due Date<p-sortIcon field="InitiatedOn"></p-sortIcon></th>
+                            <!-- <th pSortableColumn="InitiatedOn" style="width:200px">Due Date<p-sortIcon field="InitiatedOn"></p-sortIcon></th> -->
     
                         </tr>
                     </ng-template>
@@ -54,13 +55,13 @@
                             </td> 
                            <td *ngIf="!access">Restricted</td>
                             <td>{{assigned.TaskName}}</td>
-                            <td>{{assigned.Stage}}</td>
+                            <!-- <td>{{assigned.Stage}}</td> -->
                             <!-- <td>{{assigned.assignedGroup}}</td> -->
                             <td>{{assigned.InitiatedBy}}</td>
                             <td>{{assigned.InitiatedOn}}</td>
                             <!-- <td>{{assigned.status}}</td> -->
                             <td><span class="status" [ngClass]="getStatusClass(assigned.Status)">{{assigned.Status}}</span></td>
-                            <td>{{assigned.InitiatedOn}}</td>
+                            <!-- <td>{{assigned.InitiatedOn}}</td> -->
                         </tr>
                     </ng-template>
                 </p-table>
