--- a/VlimsApp/ClientApp/src/app/modules/documents/components/document-master-home/document-master-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/document-master-home/document-master-home.component.html
@@ -46,15 +46,15 @@
       </div>
     </div>
 
-    <div class="col col-lg-3">
+    <!-- <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('document-types')">
         <div class="card-body">
           <i class="fa fa-message"></i>
           <h5 class="card-title">Notification Configuration</h5>
         </div>
       </div>
-    </div>
-
+    </div> -->
+<!-- 
     <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('document-types')">
         <div class="card-body">
@@ -62,7 +62,7 @@
           <h5 class="card-title">Dashboard Configuration</h5>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 </div>
