--- a/VlimsApp/ClientApp/src/app/modules/documents/components/documents-landing/documents-landing.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/documents-landing/documents-landing.component.html
@@ -19,14 +19,14 @@
       </div>
     </div>
 
-    <div class="col col-lg-3">
+    <!-- <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('dashboard')">
         <div class="card-body">
           <i class="fa fa-chart-pie"></i>
           <h5 class="card-title">Dashboard</h5>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('document-master')">
@@ -48,14 +48,14 @@
       </div>
     </div>
 
-    <div class="col col-lg-3">
+    <!-- <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('document-types')">
         <div class="card-body">
           <i class="fa-solid fa-database"></i>
           <h5 class="card-title">Document Repository</h5>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('admin')">
