--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -40,9 +40,9 @@
                  <th pSortableColumn="printtype" style="width:20%">Document Type <p-sortIcon field="printtype"></p-sortIcon></th>
                  <th pSortableColumn="documenttitle" style="width:25%">Document Name<p-sortIcon field="documenttitle"></p-sortIcon></th>
                  <th pSortableColumn="documentNumber" style="width:20%">Document Number<p-sortIcon field="documentNumber"></p-sortIcon></th>
-                 <th pSortableColumn="modifiedDate" style="width:100px">Printed On <p-sortIcon field="modifiedDate"></p-sortIcon></th>
-                 <th pSortableColumn="workflow" style="width:100px">Printed by <p-sortIcon field="modifiedby"></p-sortIcon></th>
-                 <th pSortableColumn="noofcopies" style="width:100px">Print Count <p-sortIcon field="noofcopies"></p-sortIcon></th>
+                 <th pSortableColumn="modifiedDate" style="width:100px">Initiated On <p-sortIcon field="modifiedDate"></p-sortIcon></th>
+                 <th pSortableColumn="workflow" style="width:100px">Initiated by <p-sortIcon field="modifiedby"></p-sortIcon></th>
+                 <!-- <th pSortableColumn="noofcopies" style="width:100px">Print Count <p-sortIcon field="noofcopies"></p-sortIcon></th> -->
                  <!-- <th pSortableColumn="Status" style="width:100px">Status <p-sortIcon field="Status"></p-sortIcon></th> -->
                  <!-- <th style="width:80px">Modify</th> -->
    
@@ -56,13 +56,13 @@
                  <td>{{doc?.documentNumber}}</td>
                  <td>{{doc?.modifiedDate | date:'dd/MM/yyy'}}</td>
                  <td>{{doc?.modifiedBy}}</td>
-                 <td>{{doc?.noofcopies}}</td>
+                 <!-- <td>{{doc?.noofcopies}}</td> -->
    
                  <!-- <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td> -->
                  <!-- <td class="text-center" (click)="editdoc(doc)" *ngIf="access && doc?.status==='In-Progress'"><i class="bi bi-pencil"></i></td> -->
                  <!-- <td class="text-center" *ngIf="!access">
                    <i class="bi bi-lock bi-lg" 
-                   [ngClass]="{'text-primary':true}"
+                   [ngClass]="{'text-primary':true}"  
                    title="No Permissions">
                    </i>
                  </td>
