--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -41,9 +41,9 @@
           
 
           <div class="form-group row">
-            <label for="prefix" class="col-sm-2 col-form-label">Print Type</label>
+            <label for="prefix" class="col-sm-2 col-form-label">Document Type</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="print" name="printType" placeholder="Print Type"
+              <input type="text" class="form-control" id="print" name="printType" placeholder="Document Type"
                 [(ngModel)]="print.printtype" [disabled]="'true'"/>
             </div>
           </div>
