--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/new-role.component.html
@@ -76,7 +76,7 @@
 
         
           <div class="form-group row">
-            <label for="comments" class="col-sm-2 col-form-label">Comments<span style="color: red; font-weight: bolder;">*</span></label>
+            <label for="comments" class="col-sm-2 col-form-label">Comments</label>
             <div class="col-sm-10">
               <textarea 
                      class="form-control"
@@ -86,7 +86,7 @@
                      placeholder="Comments please"
                      [(ngModel)]="addrole.Comments" [disabled]="viewMode"
                      maxlength="250"
-                     required
+                     
                      #commentsInput="ngModel">
                       
                     </textarea>
