--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/roles.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/roles.component.html
@@ -16,7 +16,7 @@
                       <span class="input-group-text custom-input-group-text">
                           <i class="fas fa-search custom-search-icon"></i>
                       </span>
-                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="49">
+                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
                   </div>
                     
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRoles()"  *ngIf="access">New</button>
@@ -36,7 +36,7 @@
                 <tr>
                   <th>S.No</th>             
                   <th pSortableColumn="Role" style="width:10%">Role Name <p-sortIcon field="Role"></p-sortIcon></th>
-                  <!-- <th pSortableColumn="Department" style="width:15%">Department<p-sortIcon field="Department"></p-sortIcon></th> -->
+                  <th pSortableColumn="Department" style="width:15%">Department<p-sortIcon field="Department"></p-sortIcon></th>
                   <!-- <th pSortableColumn="Comments" style="width:20%">Comments<p-sortIcon field="Comments"></p-sortIcon></th> -->
                   <th pSortableColumn="CreatedBy" style="width:200px">Registered By<p-sortIcon field="CreatedBy"></p-sortIcon></th>
                   <th pSortableColumn="CreatedDate" style="width:200px">Registered On <p-sortIcon field="CreatedDate"></p-sortIcon></th>              
@@ -113,8 +113,6 @@
           color: #555;
 
       }
-
-      
 
 
 
