--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
@@ -151,7 +151,7 @@
           </div>
 
           <div class="form-group row">
-            <label for="doj" class="col-sm-2 col-form-label">DOJ</label>
+            <label for="doj" class="col-sm-2 col-form-label">Date of Joining</label>
             <div class="col-sm-10">
                 <input type="date"
                        class="form-control"
@@ -199,7 +199,7 @@
           
 
           <div class="form-group row">
-            <label for="emailid" class="col-sm-2 col-form-label">E_Mail ID</label>
+            <label for="emailid" class="col-sm-2 col-form-label">E-Mail ID</label>
             <div class="col-sm-10">
                 <input type="text"
                        class="form-control"
