--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -67,7 +67,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="form-group row">
+        <div class="form-group row">
           <label for="templateName" class="col-sm-2 col-form-label">No. Of Pages <span style="color: red; font-weight: bolder;">*</span></label>
           <div class="col-sm-10">
             <input type="text"
@@ -83,7 +83,7 @@
                         Enter No. Of Pages
                       </div>
           </div>
-        </div> -->
+        </div>
         <div class="form-group row">
           <label for="templateName" class="col-sm-2 col-form-label">Logo <span style="color: red; font-weight: bolder;">*</span></label>
           <div class="col-sm-10" *ngIf="templateForm.header==null || templateForm.header==''">
