--- a/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
@@ -34,7 +34,7 @@
                 [globalFilterFields]="['workflowName','documentstage', 'documenttype', 'departments','CreatedBy', 'Status','workflowName']"
                  tableStyleClass="table table-striped" [rows]="itemsPerPage"
                 [paginator]="true" [totalRecords]="types.length"
-                [rowsPerPageOptions]="rowsPerPageOptions" >
+                [rowsPerPageOptions]="rowsPerPageOptions" [rowHover]="true">
                     <ng-template pTemplate="header">
                         <tr>
                             <th>S.No</th>
