--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -60,7 +60,7 @@
           <label for="docType" class="col-sm-2 col-form-label">Document Type <span style="color: red; font-weight: bolder;">*</span></label>
           <div class="col-sm-10">
             <p-dropdown [options]="typesDatasource" [(ngModel)]="selectedtype" placeholder="Select Document Type"
-                optionLabel="Documenttypename" id="types" name="types" [autoDisplayFirst]="false" [required]="true" #DocumenttypenameInput="ngModel" [disabled]="editMode"  >
+                optionLabel="Documenttypename" id="types" name="types" [autoDisplayFirst]="false" [required]="true" #DocumenttypenameInput="ngModel"  [disabled]="editMode" >
              </p-dropdown>
              <div *ngIf="DocumenttypenameInput.invalid && (DocumenttypenameInput.dirty || DocumenttypenameInput.touched)" class="text-danger">
               Document Type is required
@@ -91,7 +91,7 @@
                    class="form-control mw-350"
                    id="logoUpload" 
                   (change)="onLogoUpload($event)" accept="image/*"
-                   required 
+                   z 
                     
                       />
           </div>
@@ -329,19 +329,23 @@
         </div>
     </div>
       
-      <div class="form-group row my-4">
-        <div class="col-sm-10 offset-sm-2">
-          <button type="button"
-                  class="btn btn-outline-secondary mx-2"
-                  (click)="onCancel()">
-            Cancel
-          </button>
-          <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid || isButtonDisabled"  (click)="addTemplate()">{{editMode?'Update':'Submit'}} </button>
-          <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="approve()">Approve</button>
-          <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="reinitiative()">Re-Initiative</button>
-          <button type="button" class="col-xs-1 mx-8 offset-sm-1 btn btn-danger" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="reject()">Reject</button>
-        </div>
-      </div>
+    <div class="form-group row my-4">
+  <div class="col-sm-10 offset-sm-2">
+    <!-- Cancel Button -->
+    <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
+    
+    <!-- Update Button (visible only in editMode) -->
+    <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid || isButtonDisabled" (click)="addTemplate()">Submit</button>
+    <button type="submit" class="btn btn-primary" *ngIf="editMode" (click)="addTemplate()">Update</button>
+    
+    <!-- Individual Buttons for Approval Actions -->
+    <button type="button" class="col-xs-1 mx-2 btn btn-success" *ngIf="viewMode && templateForm.Status !== 'Approved'" (click)="approve()">Approve</button>
+    <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && templateForm.Status !== 'Approved'" (click)="reinitiative()">Re-Initiative</button>
+    <button type="button" class="col-xs-1 mx-8 offset-sm-1 btn btn-danger" *ngIf="viewMode && templateForm.Status !== 'Approved'" (click)="reject()">Reject</button>
+  </div>
+</div>
+
+    
       <!-- </form> -->
    
   </div>
