--- a/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
@@ -40,7 +40,7 @@
                         <th pSortableColumn="department" style="width:15%">Department   <p-sortIcon field="department"></p-sortIcon></th>
                         <!-- <th pSortableColumn="modifiedBy" style="width:20%">Registered by<p-sortIcon field="modifiedBy"></p-sortIcon></th>
                         <th pSortableColumn="modifiedDate" style="width:200px">Registered On <p-sortIcon field="modifiedDate"></p-sortIcon></th> -->
-                        <th pSortableColumn="workflow" style="width:20%">Workflow<p-sortIcon field="workflow"></p-sortIcon></th>
+                        <!-- <th pSortableColumn="workflow" style="width:20%">Workflow<p-sortIcon field="workflow"></p-sortIcon></th> -->
                         <!-- <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
                         <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th> -->
                         <th pSortableColumn="status" style="width:200px">Status <p-sortIcon field="status"></p-sortIcon></th>
@@ -53,7 +53,7 @@
                         <td>{{docType?.drid}}</td>
                         <td>{{docType?.documenttype}}</td>
                         <td>{{docType?.department}}</td>
-                        <td>{{docType?.workflow}}</td>
+                        <!-- <td>{{docType?.workflow}}</td> -->
                         <!-- <td>{{docType?.modifiedBy}}</td>
                         <td>{{docType?.modifiedDate| date}}</td> -->
                         <!-- <td>{{docType?.approvedby}}</td>
