--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -46,18 +46,18 @@
                 <th pSortableColumn="documenttitle" style="width: 15%">
                   Document Name<p-sortIcon field="documenttitle"></p-sortIcon>
                 </th>
-                <th pSortableColumn="documentType" style="width: 15%">
-                  Document Type<p-sortIcon field="documentType"></p-sortIcon>
-                </th>
+                <th pSortableColumn="documenttype" style="width: 15%">
+                  Document Type<p-sortIcon field="documenttype"></p-sortIcon>
+                </th>de
                 <th pSortableColumn="department" style="width: 15%">
                   Department<p-sortIcon field="department"></p-sortIcon>
                 </th>
   
-                <th pSortableColumn="assignedToGroup" style="width: 100px">
+                <!-- <th pSortableColumn="assignedToGroup" style="width: 100px">
                   Assigned to group<p-sortIcon
                     field="assignedToGroup"
                   ></p-sortIcon>
-                </th>
+                </th> -->
                 <th pSortableColumn="status" style="width: 100px">
                   Status <p-sortIcon field="status"></p-sortIcon>
                 </th>
@@ -73,7 +73,7 @@
                 <td>{{ docPreperation.documenttitle }}</td>
                 <td>{{ docPreperation.documenttype }}</td>
                 <td>{{ docPreperation.department }}</td>
-                <td>{{ docPreperation.template }}</td>
+                <!-- <td>{{ docPreperation.template }}</td> -->
                 <td>
                   <span
                     class="status"
