--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/securitymgmt/securitymgmt.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/securitymgmt/securitymgmt.component.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="form-group row">
-              <label for="minpass" class="col-sm-2 col-form-label">Minimum Password Length<span style="color: red; font-weight: bolder;">*</span></label>
+              <label for="minpass" class="col-sm-2 col-form-label">Maximim Password Length<span style="color: red; font-weight: bolder;">*</span></label>
               <div class="col-sm-10">
                 <input type="text"
                       class="form-control"
