--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="templateName" class="col-sm-2 col-form-label">Logo <span style="color: red; font-weight: bolder;">*</span></label>
+          <label for="templateName" class="col-sm-2 col-form-label">Logo</label>
           <div class="col-sm-10" *ngIf="templateForm.header==null || templateForm.header==''">
             <input type="file"  
                    class="form-control mw-350"
