--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
@@ -39,7 +39,7 @@
                         <th pSortableColumn="Templatename" style="width:20%">Template Name<p-sortIcon field="Templatename"></p-sortIcon></th>
                         <th pSortableColumn="Uniquecode" style="width:10%">Unique Code <p-sortIcon field="Uniquecode"></p-sortIcon></th>
                         <!-- <th pSortableColumn="description" style="width:15%">Description<p-sortIcon field="description"></p-sortIcon></th> -->
-                        <th pSortableColumn="CreatedBy" style="width:20%">Registered by<p-sortIcon field="CreatedBy"></p-sortIcon></th>
+                        <th pSortableColumn="CreatedBy" style="width:20%">Registered By<p-sortIcon field="CreatedBy"></p-sortIcon></th>
                         <th pSortableColumn="CreatedDate" style="width:200px">Registered On <p-sortIcon field="CreatedDate"></p-sortIcon></th>
                         <!-- <th pSortableColumn="Preview" style="width:200px">Preview <p-sortIcon field="Preview"></p-sortIcon></th> -->
                         <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
