changes of Preview document

--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -81,7 +81,8 @@
                     >{{ docPreperation.status }}
                   </span>
                 </td>
-                <td class="text-center" *ngIf="access && docPreperation?.status=='IN-PROGRESS'"><a (click)="navigateToAddPreparation(docPreperation)"><i  class="bi bi-arrow-right"></i></a></td>
+                <td class="text-center" *ngIf="access && docPreperation?.status=='IN-PROGRESS'"><a (click)="navigateToAddPreparation(docPreperation)"><i  class="bi bi-arrow-right"></i></a>
+                                                                                              &nbsp;  <a href="previewtemplate(template,docPreperation.template)">view tamplate</a></td>
                 <td class="text-center" *ngIf="!access">
                   <i class="bi bi-lock bi-lg" 
                   [ngClass]="{'text-primary':true}"
@@ -136,7 +137,20 @@
       }
   </style>
 
-
+<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Preview</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="closeModel()">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <iframe *ngIf="pdfUrl" [src]="pdfUrl" type="application/pdf" width="100%" height="500px"></iframe>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" (click)="closeModel()">Close</button>
+  </div>
+</ng-template>
 
 
 
