--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
@@ -45,6 +45,8 @@
                       <!-- <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
                       <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th> -->
                       <th style="width:80px">Actions</th>
+                      <th style="width:80px">Preview Document</th>
+
                   </tr>
               </ng-template>
               <ng-template pTemplate="body" let-existingdoc let-i="rowIndex">
@@ -61,12 +63,18 @@
                       <td >{{existingdoc?.reviewDate | date:'dd/MM/yyyy'}}</td>
                       <!-- <td>{{existingdoc?.approvedby}}</td>
                       <td>{{existingdoc?.approvedOn| date}}</td> -->
-                      <td class="text-center" *ngIf="access"><i (click)="editExistingDoc(existingdoc)" class="bi bi-pencil"></i></td>
+                      <td class="text-center" *ngIf="access">
+                        <i (click)="editExistingDoc(existingdoc)" class="bi bi-pencil"></i>
+                      </td>
                       <td *ngIf="!access">
                         <i class="bi bi-lock bi-lg" 
                         [ngClass]="{'text-primary':true}"
                         title="No Permissions">
                         </i>
+                      </td>
+
+                      <td>
+                        <a href="javascript:void(0);" (click)="previewtemplate(template,existingdoc)">Preview</a>
                       </td>
                   </tr>
               </ng-template>
@@ -108,7 +116,20 @@
             box-shadow: none;
         }
     </style>
-
+<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Preview</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="closeModel()">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <iframe *ngIf="pdfUrl" [src]="pdfUrl" type="application/pdf" width="100%" height="500px"></iframe>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" (click)="closeModel()">Close</button>
+  </div>
+</ng-template>
 
 
 
